--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/dconchamz/commitlint-test#readme",
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4"
+    "@commitlint/config-conventional": "^16.2.4",
+    "husky": "^4.3.8"
   },
   "dependencies": {}
 }
