--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
     "test": "jest"
   },
   "repository": {
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
-    "husky": "^4.3.8",
+    "husky": "^7.0.0",
     "jest": "^28.0.2"
   },
   "dependencies": {}
